// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parse Header (with \\n) 1`] = `
{
  "blocks": [
    {
      "content": [
        {
          "content": "Main Header",
          "type": "PlainText",
        },
      ],
      "level": 2,
      "type": "Header",
    },
  ],
  "type": "Document",
}
`;

exports[`Parse Header (without \\n is PlainText) 1`] = `
{
  "blocks": [
    {
      "content": "= Main Header",
      "type": "PlainText",
    },
  ],
  "type": "Document",
}
`;
